lessons/lesson-1.3/backend-egress-to-database-policy.yaml
# File: backend-egress-to-database-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-to-database
  namespace: open-app
spec:
  podSelector:
    matchLabels:
      component: backend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          component: database
    ports:
    - protocol: TCP
      port: 5432
