lessons/lesson-1.3/default_deny_all.yaml
#default_deny_all
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: open-app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
