lessons/lesson-1.3/frontend-egress-policy.yaml
# File: frontend-egress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-egress-policy
  namespace: open-app
spec:
  podSelector:
    matchLabels:
      component: frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          component: backend
    ports:
    - protocol: TCP
      port: 5000
